syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message CalculatorRequest {
    int32 integerOne = 1;
    int32 integerTwo = 2;
}

message CalculatorResponse {
    int32 result = 1;
}

service CalculatorService {
    rpc Sum(CalculatorRequest) returns (CalculatorResponse){};
}

